Bug 1181097 - Properly handle the case of resuming an AudioContext with an MSG that is already switching to an AudioCallbackDriver. r=roc, a=lmandel

--HG--
extra : amend_source : eb977d26f926d7ce0a7d74380cb0f1d50a2e60a0
extra : transplant_source : %17%21%CC%FF%5CU%80%CE%DB%ABvL%3DH%A4%05%E0%EF_Y